--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -1,3 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+html {
+  color-scheme: dark;
+  background-color: rgb(2 6 23);
+  font-family: system-ui, sans-serif;
+  overscroll-behavior: smooth;
+}
