--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-html {
-  color-scheme: dark;
-  font-family: system-ui, sans-serif;
-  overscroll-behavior: smooth;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
