Navbar responsive fix

--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -3,4 +3,5 @@ html {
   background-color: rgb(2 6 23);
   font-family: system-ui, sans-serif;
   overscroll-behavior: smooth;
+  color: #e7e5e4;
 }
